# regex-applicative

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  Reference.hs  RegExp.hs  regex-applicative.cabal  regex-applicative.tex  regexapplicative-Rr.tex  stack.yaml  test.hs
Text/Regex/: Applicative.hs
Text/Regex/Applicative/: Common.hs  Compile.hs  Implementation.hs  Interface.hs  ListLike.hs  Object.hs  Priorities.hs  Reference.hs  StateQueue.hs  Types.hs
benchmark/: benchmark.hs  runbenchmark.sh
doctest/: doctest.hs
tests/: StateQueue.hs  test.hs
