Name:                regex-applicative
Version:             0.3.3.1
Synopsis:            Regex-based parsing with applicative interface
Description:         
    regex-applicative is a Haskell library for parsing using regular expressions.
    Parsers can be built using Applicative interface.
Homepage:            https://github.com/feuerbach/regex-applicative
License:             MIT
License-file:        LICENSE
Author:              Roman Cheplyaka
Maintainer:          Roman Cheplyaka <roma@ro-che.info>
Category:            Text
Build-type:          Simple
Extra-source-files:  README.md CREDITS.md CHANGES.md
Cabal-version:       >=1.10

Source-repository head
  type:     git
  location: git://github.com/feuerbach/regex-applicative.git

Library
  Default-language:    Haskell2010
  Build-depends:       base < 5,
                       containers,
                       transformers
  Exposed-modules:     Text.Regex.Applicative
                       Text.Regex.Applicative.Object
                       Text.Regex.Applicative.Common
                       Text.Regex.Applicative.Reference
                       Text.Regex.Applicative.StateQueue
  Other-modules:       Text.Regex.Applicative.Interface
                       Text.Regex.Applicative.Types
                       Text.Regex.Applicative.Compile
  GHC-Options:     -Wall
                   -fno-warn-name-shadowing
                   -fno-warn-missing-signatures
                   -fno-warn-orphans

Test-Suite test-regex-applicative
  type:       exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    StateQueue
  GHC-Options: -threaded
  Default-language:    Haskell2010
  Build-depends:       base < 5,
                       containers,
                       transformers,
                       smallcheck >= 1.0,
                       tasty,
                       tasty-smallcheck,
                       tasty-hunit,
                       regex-applicative

Benchmark bench-regex-applicative
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        benchmark.hs
  build-depends:  base <5
                , criterion
                , regex-applicative
  default-language: Haskell2010
